# GameEngine

./: CMakeLists.txt
Exercise4/Engine/Engine/: Component.h  GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
Exercise4/ExampleGame/: main.cpp
Exercise4/ExampleGame/Game/: AstroidController.cpp  AstroidController.h  LaserController.cpp  LaserController.h  LaserObjectController.cpp  LaserObjectController.h  PlayerController.cpp  PlayerController.h
Exercise4/ExampleGame/data/: Asteroid.json
Exercise6/: README.md
Exercise6/Engine/: CMakeLists.txt
Exercise6/Engine/Engine/: GameObject.cpp  MyEngine.cpp
Exercise6/ExampleGame/: CMakeLists.txt  main.cpp
Exercise6/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentLayout.cpp  ComponentLayout.h  ComponentRendererMesh.cpp  ComponentRendererMesh.h
Exercise6/ExampleGame/data/: scene.json
SnakeGame/: CMakeLists.txt  main.cpp
SnakeGame/Engine/: Component.h  GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
SnakeGame/Game/: Collectible.cpp  Collectible.h  Player.cpp  Player.h  Score.cpp  Score.h
